# font_builder

./: Cargo.toml
src/: error.rs  lib.rs  validator.rs
src/builder/: font_compiler.rs  manifest_generator.rs  mod.rs
src/models/: family.rs  info.rs  manifest.rs  mod.rs
src/parser/: info_parser.rs  mod.rs
