[package]
name = "font-builder"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"

[lib]
name = "font_builder"
path = "src/lib.rs"

[[bin]]
name = "font-builder"
path = "src/bin/font-builder.rs"

[dependencies]
# Core
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Font handling
norad = "0.12"
write-fonts = "0.43.0"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"

# File system
walkdir = "2.4"
camino = { version = "1.1", features = ["serde1"] }

# Validation
once_cell = "1.19"
regex = "1.10"
jiff = { version = "0.2.15", features = ["serde"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5"

[dependencies.clap]
version = "4.5"
features = ["derive", "cargo", "env", "wrap_help"]
optional = true

[dependencies.eyre]
version = "0.6"
optional = true

[dependencies.tracing]
version = "0.1"
optional = true

[dependencies.tracing-subscriber]
version = "0.3"
features = ["env-filter"]
optional = true

[features]
default = ["cli"]
cli = ["dep:clap", "dep:eyre", "dep:tracing", "dep:tracing-subscriber"]

[dev-dependencies]
tempfile = "3.8"
